# apex-inference

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/apex-core/: Cargo.toml
crates/apex-core/benches/: hot_paths.rs
crates/apex-core/src/: admission.rs  config.rs  dispatcher.rs  error.rs  lib.rs  registry.rs  reload.rs
crates/apex-core/src/ort_bridge/: invoke.rs  mod.rs  runtime.rs  session.rs
crates/apex-server/: Cargo.toml  build.rs
crates/apex-server/src/: grpc.rs  lib.rs  main.rs  proto.rs
crates/apex-server/tests/: admission_reject.rs  e2e.rs  inflight_reload.rs  load.rs  multi_model.rs  reload.rs
crates/apex-server/tests/common/: mod.rs
examples/: config.yaml  python_client.py
tests/fixtures/: build_fixture.py  doubler.onnx  tripler.onnx
tests/python/: bench.py  test_tritonclient.py
