[package]
name = "apex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core inference engine: ORT bridge, batch scheduler, model registry, admission controller"

[dependencies]
tokio = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "hot_paths"
harness = false
